package com.engine.events;

/**
 * GamepadAxis enum.
 * This is the gamepad axis.
 */
public enum GamepadAxis {
    /** Left gamepad axis. */
    AXIS_LEFT,
    /** Right gamepad axis. */
    AXIS_RIGHT
}
