package com.engine.events;

/**
 * KeyCode enum.
 * This is the key code.
 */
public enum KeyCode {
    /** A keyboard key. */
    KEY_A,
    /** B keyboard key. */
    KEY_B,
    /** C keyboard key. */
    KEY_C,
    /** D keyboard key. */
    KEY_D,
    /** E keyboard key. */
    KEY_E,
    /** F keyboard key. */
    KEY_F,
    /** G keyboard key. */
    KEY_G,
    /** H keyboard key. */
    KEY_H,
    /** I keyboard key. */
    KEY_I,
    /** J keyboard key. */
    KEY_J,
    /** K keyboard key. */
    KEY_K,
    /** L keyboard key. */
    KEY_L,
    /** M keyboard key. */
    KEY_M,
    /** N keyboard key. */
    KEY_N,
    /** O keyboard key. */
    KEY_O,
    /** P keyboard key. */
    KEY_P,
    /** Q keyboard key. */
    KEY_Q,
    /** R keyboard key. */
    KEY_R,
    /** S keyboard key. */
    KEY_S,
    /** T keyboard key. */
    KEY_T,
    /** U keyboard key. */
    KEY_U,
    /** V keyboard key. */
    KEY_V,
    /** W keyboard key. */
    KEY_W,
    /** X keyboard key. */
    KEY_X,
    /** Y keyboard key. */
    KEY_Y,
    /** Z keyboard key. */
    KEY_Z,
    /** 0 keyboard key. */
    KEY_0,
    /** 1 keyboard key. */
    KEY_1,
    /** 2 keyboard key. */
    KEY_2,
    /** 3 keyboard key. */
    KEY_3,
    /** 4 keyboard key. */
    KEY_4,
    /** 5 keyboard key. */
    KEY_5,
    /** 6 keyboard key. */
    KEY_6,
    /** 7 keyboard key. */
    KEY_7,
    /** 8 keyboard key. */
    KEY_8,
    /** 9 keyboard key. */
    KEY_9,
    /** Space keyboard key. */
    KEY_SPACE,
    /** Enter keyboard key. */
    KEY_ENTER,
    /** Escape keyboard key. */
    KEY_ESCAPE,
    /** Up arrow keyboard key. */
    KEY_UP,
    /** Down arrow keyboard key. */
    KEY_DOWN,
    /** Left arrow keyboard key. */
    KEY_LEFT,
    /** Right arrow keyboard key. */
    KEY_RIGHT,
    /** Shift keyboard key. */
    KEY_SHIFT,
    /** Ctrl keyboard key. */
    KEY_CTRL,
    /** Alt keyboard key. */
    KEY_ALT,
    /** Tab keyboard key. */
    KEY_TAB,
    /** Backspace keyboard key. */
    KEY_BACKSPACE,
    /** Delete keyboard key. */
    KEY_DELETE,
    /** Home keyboard key. */
    KEY_HOME,
    /** End keyboard key. */
    KEY_END
}
