package com.engine.events;

/**
 * MouseBtn enum.
 * This is the mouse button.
 */
public enum MouseBtn {
    /** Left mouse button. */
    BTN_LEFT,
    /** Right mouse button. */
    BTN_RIGHT,
    /** Middle mouse button. */
    BTN_MIDDLE
}
